# nvibrant-gui

./: .gitignore  BUILD.md  CMakeLists.txt  INSTALL.md  LICENSE  PKGBUILD  README.md
.github/workflows/: build.yml
cmake/: uninstall.cmake
packaging/: nvibrant-gui.desktop
resources/: resources.qrc
src/: main.cpp
src/backend/: ConfigManager.cpp  ConfigManager.h  NvibrantController.cpp  NvibrantController.h  PresetManager.cpp  PresetManager.h  ProcessRunner.cpp  ProcessRunner.h
src/ui/: AboutDialog.cpp  AboutDialog.h  MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h  TrayIcon.cpp  TrayIcon.h
src/widgets/: DeviceSelector.cpp  DeviceSelector.h  MonitorLayout.cpp  MonitorLayout.h  PresetList.cpp  PresetList.h  VibranceSlider.cpp  VibranceSlider.h
